Page MenuHome GnuPG

libassuan: Introduce use of gpgrt_get_syscall_clamp, no use of system_hooks for nPTH
Testing, NormalPublic

Description

The approach of system_hooks for nPTH introduces (not-needed) dependency to nPTH (which is not needed, essentially) in 'assuan.h'.
Now, given gpgrt_get_syscall_clamp API, we can avoid entire system_hooks usage for nPTH.

The new way will be:

  • libassuan side:
    • When system_hooks is set by an application, prefer that
    • Not set, get pre and post camp functions by gpgrt_get_syscall_clamp and wrap the calls to __assuan_ functions with them.
  • Applications can remove setting of system_hooks, only use the clamp functions

Event Timeline

gniibe triaged this task as Normal priority.Apr 1 2022, 4:11 AM
gniibe created this task.
gniibe updated the task description. (Show Details)

GPGME has its own system hooks to provide a (different) solution for portability (Windows and POSIX).

Unfortunately, use of system hooks by GPGME has been evolved its own way. So, at least for a while, the use of system hooks cannot be removed.

This use case of GPGME is always through assuan_ctx_set_system_hooks.

gniibe added a project: Restricted Project.May 24 2022, 9:43 AM
werner changed the task status from Open to Testing.Sep 22 2022, 11:01 AM
werner removed a project: Restricted Project.
gniibe renamed this task from libassuan: Introduce use of gpgrt_get_syscall_clamp, no use of system_hooks to libassuan: Introduce use of gpgrt_get_syscall_clamp, no use of system_hooks for nPTH.Aug 4 2023, 8:06 AM
gniibe updated the task description. (Show Details)