Take advantage of gpgrt_get_syscall_clamp function.

* src/assuan-defs.h (_assuan_pre_syscall, _assuan_post_syscall): New.
* src/assuan.c (_assuan_pre_syscall, _assuan_post_syscall): New.
(pre_syscall_func, post_syscall_func): New.
(_assuan_syscall_func_initialized): New.
(assuan_new_ext): Call gpgrt_get_syscall_clamp to get clamp functions.
* src/system-posix.c (_assuan_system_hooks): Use version 0.
* src/system-w32.c (_assuan_system_hooks): Likewise.
* src/system.c (_assuan_usleep): Call clamp functions if no hooks.
(_assuan_close, _assuan_close_inheritable, _assuan_read): Likewise.
(_assuan_write, _assuan_recvmsg, _assuan_sendmsg): Likewise.
(_assuan_waitpid, _assuan_connect): Likewise.
(_assuan_pipe): Call __assuan_pipe directly if no hooks.
(_assuan_spawn): Call __assuan_spawn directly if no hooks.
(_assuan_socketpair): Call __assuan_socketpair directly if no hooks.
(_assuan_socket): Call __assuan_socket directly if no hooks.

--

GnuPG-bug-id: 5914
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>